.provarCaches/00D410000011HE0EAM/objects/rstkf__aragingh__c.object
<CustomObject>
    <description>aragingh__c : Header table for AR Aging data for drill down enabled</description>
    <fields>
        <fullName>rstkf__aragingh_agingdate__c</fullName>
        <label>Aging Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingh_cutoffdate__c</fullName>
        <label>Cutoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingh_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>AR Aging Drill Down Headers</relationshipLabel>
        <relationshipName>araginghs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingh_glusr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>AR Aging Drill Down Headers</relationshipLabel>
        <relationshipName>araginghs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingh_numcol1head__c</fullName>
        <label>Number Column 1 Header</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingh_numcol2head__c</fullName>
        <label>Number Column 2 Header</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingh_numcol3head__c</fullName>
        <label>Number Column 3 Header</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingh_processlog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>aragingh_processlog__c</description>
        <label>Processlog</label>
        <referenceTo>rstkf__processlogf__c</referenceTo>
        <relationshipLabel>AR Aging Drill Down Headers</relationshipLabel>
        <relationshipName>processlogs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingh_recordcount__c</fullName>
        <label>Record Count</label>
        <summaryForeignKey>rstkf__aragingd__c.rstkf__aragingd_aragingh__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingh_reportdate__c</fullName>
        <label>Date Printed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__aragingh_glcmp__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c  &amp; &apos;_&apos; &amp;  TEXT(rstkf__aragingh_agingdate__c)</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__aragingh_glcmp__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c  &amp; &apos;-&apos; &amp; TEXT(rstkf__aragingh_agingdate__c)</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AR Aging Drill Down Header</label>
    <listViews>
        <fullName>rstkf__AR_Aging_Drill_Down_Headers</fullName>
        <columns>NAME</columns>
        <columns>rstkf__aragingh_agingdate__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstkf__aragingh_cutoffdate__c</columns>
        <columns>rstkf__aragingh_reportdate__c</columns>
        <columns>rstkf__aragingh_processlog__c</columns>
        <columns>rstkf__aragingh_recordcount__c</columns>
        <filterScope>Everything</filterScope>
        <label>AR_Aging_Drill_Down_Headers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__all</fullName>
        <columns>NAME</columns>
        <columns>rstkf__aragingh_agingdate__c</columns>
        <columns>rstkf__aragingh_glcmp__c</columns>
        <columns>rstkf__aragingh_cutoffdate__c</columns>
        <columns>rstkf__aragingh_reportdate__c</columns>
        <columns>rstkf__externalid__c</columns>
        <columns>rstkf__formula_extid__c</columns>
        <columns>rstkf__formula_name__c</columns>
        <columns>rstkf__aragingh_numcol1head__c</columns>
        <columns>rstkf__aragingh_numcol2head__c</columns>
        <columns>rstkf__aragingh_numcol3head__c</columns>
        <columns>rstkf__aragingh_numcol4head__c</columns>
        <columns>rstkf__aragingh_numcol5head__c</columns>
        <columns>rstkf__aragingh_numcol6head__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR Aging Drill Down Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>